test4fun/deployment.yml
# Kubernetes Manifest file - Deployment
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: testphp-dp
spec:
  selector:
    matchLabels:
      app: testphp
  replicas: 1
  template:
    metadata:
      labels:
        app: testphp
    spec:
      containers:
      - name: testcontainer
        image: testacr03.azurecr.io/testphp
        imagePullPolicy: Always
        ports:
        - containerPort: 80
