test4fun/service.yml
apiVersion: v1
kind: Service
metadata:
  name: testphp-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: testphp
  type: ClusterIP
