test4fun/combo.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: testphp-dp
spec:
  selector:
    matchLabels:
      app: testphp
  replicas: 3
  template:
    metadata:
      labels:
        app: testphp
    spec:
      containers:
      - name: testcontainer
        image: myacr031.azurecr.io/testphp:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: testphp-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: testphp
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: testphp-svc
            port:
              number: 80
        pathType: Exact
